<resources>
    <string name="app_name">MeetForSport</string>
    <string name="title_map">Map</string>
    <string name="title_event_list">Events</string>
    <string name="title_user_profile">User Profile</string>
    <string name="cancel">cancel</string>
    <string name="submit">submit</string>

    <!-- Menu Strings -->
    <string name="Map">Map</string>
    <string name="Event">Event</string>
    <string name="Person">User Profile</string>


    <string name="user_Name">Hans Dieter</string>
    <string name="profile_picture">profile picture</string>
    <string name="page">My Page</string>

    <!-- Create new Event Strings -->
    <string name="new_Event">new Event</string>
    <string name="new_Event_planner_headline">New Event</string>
    <string name="time_and_date">Time and Date</string>
    <string name="find_location">find location</string>
    <string name="select_location">select a location</string>
    <string name="location">Location</string>
    <string name="sport">Sport</string>
    <string name="select_sport">select a sport</string>
    <string name="description">Description</string>
    <string name="find_sport">find sport</string>
    <string name="more_information">More Information:</string>
    <string name="add_a_description">Add a Description</string>


    <!-- Sport information -->
    <string name="sport_name">Sport name</string>
    <string name="participants_number"> 13 people</string>
    <string name="time">Time</string>
    <string name="date">Date</string>

    <!-- User Profile -->
    <string name="your_upcoming_events">Your Upcoming Events:</string>
    <string name="edit">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="friends">Friends</string>

    <!-- EventMode Fragment -->
    <string name="filters">Filters</string>
    <string name="order">Order</string>
    <string name="search_filters">Search Filters:</string>
    <string name="sports">Sports:</string>
    <string name="all_selected">All Selected</string>
    <string name="number_selected">%1$d Selected</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="search_radius">Search Radius: %1$dkm</string>
    <string name="ordered_by">Ordered By:</string>
    <string name="apply">Apply</string>
    <string name="number_of_participants">Number Of Participants:</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="created_by">by %1$s</string>
    <string name="search_results">Search Results:</string>

    <string-array name="order_options">
        <item>Smallest Distance</item>
        <item>Closest Start Time</item>
        <item>Most Participants </item>
    </string-array>

    <!-- MapMode Fragment -->
    <string name="no_permissions">Give MeetForSports access to your location to get this functionality.</string>
    <string name="title_activity_event_information_acitivity">EventInformationAcitivity</string>

    <!-- Event Information -->
    <string name="headline_event_and_date">%1$s-Event on %2$s</string>
    <string name="participants">Participants</string>
    <string name="participant_count">%1$s/%2$s</string>
    <string name="join_event">join event</string>
    <string name="event_creator">Event Creator: %1$s</string>


</resources>