<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.meetforsport.ui.MapMode.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_event_list"
        android:name="com.example.meetforsport.ui.EventMode.EventFragment"
        android:label="@string/title_event_list"
        tools:layout="@layout/fragment_event" />

    <fragment
        android:id="@+id/navigation_user_profile"
        android:name="com.example.meetforsport.ui.UserMode.UserFragment"
        android:label="@string/title_user_profile"
        tools:layout="@layout/fragment_user" />
</navigation>