<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EventCreator.EventCreator">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      app:layout_constraintTop_toTopOf="parent"
      tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/event_introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/new_Event_planner_headline"
        android:textSize="@dimen/activity_headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/time_and_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/event_introduction">


      <EditText
          android:id="@+id/event_date_text"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="0.5"
          android:layout_marginHorizontal="16dp"
          android:ems="10"
          android:hint="@string/date"
          android:inputType="date" />

      <EditText
          android:id="@+id/event_time_text"
          android:layout_width="0dp"
          android:layout_weight="0.5"
          android:layout_marginHorizontal="16dp"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="@string/time"
          android:inputType="time" />

    </LinearLayout>

    <TextView
        android:id="@+id/location_textview_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_and_date_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/location"
        android:textSize="@dimen/activity_sectionHeadline" />

    <LinearLayout
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/location_textview_headline">

      <TextView
          android:id="@+id/address"
          android:layout_width="0dp"
          android:layout_weight="0.5"
          android:gravity="center"
          android:layout_marginHorizontal="16dp"
          android:layout_height="wrap_content"
          app:drawableStartCompat="@drawable/ic_baseline_gps_fixed"
          android:text="@string/address"
          />

      <Button
          android:id="@+id/find_location_btn"
          android:layout_width="0dp"
          android:layout_weight="0.5"
          android:layout_marginHorizontal="16dp"
          android:layout_height="wrap_content"
          android:text="@string/find_location"
          />

    </LinearLayout>

    <!-- Sport part -->

    <TextView
        android:id="@+id/sport_textview_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/sport"
        android:textSize="@dimen/activity_sectionHeadline" />

    <LinearLayout
        android:id="@+id/sport_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:layout_below="@+id/sport_textview_headline">

      <TextView
          android:id="@+id/sport_selection"
          android:gravity="center"
          android:layout_width="0dp"
          android:layout_weight="0.5"
          android:layout_marginHorizontal="16dp"
          android:layout_height="wrap_content"
          app:drawableStartCompat="@drawable/ic_baseline_sport"
          android:text="@string/sport" />

      <Button
          android:id="@+id/find_sport_btn"
          android:layout_width="0dp"
          android:layout_weight="0.5"
          android:layout_marginHorizontal="16dp"
          android:layout_height="wrap_content"
          android:text="@string/find_sport"
          />

    </LinearLayout>



    <EditText
        android:id="@+id/event_description"
        android:layout_width="383dp"
        android:layout_height="78dp"
        android:layout_below="@+id/sport_layout"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/submit_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        android:padding="16dp"
        android:gravity="center"
        android:text="@string/submit"/>

  </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>