<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_MapMode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MapMode.MapFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="204dp" />

        <RelativeLayout
            android:id="@+id/filters_and_order_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/filters_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_filter"
                android:drawableTint="@color/white"
                android:minHeight="0dp"
                android:paddingVertical="4dp"
                android:text="@string/filters" />

        </RelativeLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_newEvent_MapMode"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="72dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="?colorPrimary"
            android:contentDescription="@string/new_Event"
            app:backgroundTint="?colorPrimary"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:fabCustomSize="75dp"
            app:maxImageSize="50dp"
            app:srcCompat="@drawable/ic_add_white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/no_permission_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/transparent_light_grey"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:text="@string/no_permissions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- filters drawer-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:background="@color/lighter_grey"
        android:layout_gravity="end"
        android:layout_marginBottom="?actionBarSize">
        <TextView
            android:id="@+id/filters_drawer_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:textSize="16sp"
            android:text="@string/search_filters"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/search_radius_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="8dp"
            android:paddingVertical="8dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/filters_drawer_header">
            <TextView
                android:id="@+id/search_radius_tv"
                android:layout_marginStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <com.google.android.material.slider.Slider
                android:id="@+id/search_radius_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1.0"
                app:tickVisible="false"
                app:labelBehavior="gone"
                android:valueFrom="1"
                android:valueTo="50" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sports_selection_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="8dp"
            android:paddingVertical="8dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/search_radius_layout">

            <TextView
                android:id="@+id/sports_selection_tv"
                android:layout_marginStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/sports"/>

            <Button
                android:id="@+id/sports_selection_btn"
                android:layout_marginHorizontal="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/lighter_grey"
                android:textColor="@color/light_grey"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:text="@string/all_selected"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/num_of_participants_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="8dp"
            android:paddingVertical="8dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/sports_selection_layout">

            <TextView
                android:id="@+id/num_of_participants_tv"
                android:layout_marginStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/number_of_participants"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/num_of_participants_min_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_marginHorizontal="24dp"
                    android:hint="@string/min"
                    android:layout_weight=".5" />

                <EditText
                    android:id="@+id/num_of_participants_max_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_marginHorizontal="24dp"
                    android:hint="@string/max"
                    android:layout_weight=".5" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/apply_filters_btn"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_search"
            android:text="@string/apply_filters"
            android:drawableTint="@color/white"
            android:layout_marginVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.drawerlayout.widget.DrawerLayout>